# jpilot-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  setup.sh  test_server.py
jpilot_mcp/: __init__.py  config.py  server.py
jpilot_mcp/core/: __init__.py  adf_parser.py  client.py  issues.py  models.py  projects.py  search.py  tree.py
tests/: __init__.py
